feat: added crud ops and auth for db
